--- a/service/site/index.html
+++ b/service/site/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="gabulous.css" type="text/css" media="screen,projection">
 </head>
 <body>
-  <a id="twitter_button" href="/"></a>
+  <a id="twitter_button" href="/auth/twitter"></a>
 <p>Hello World!</p>
 </body>
 </html>
